// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureComparisonModal:  GroupHeading:  should render correctly 1`] = `
<Table.Row>
  <Table.HeaderCell
    className="GroupHeading"
    colSpan={3}
  >
    Standard Features
  </Table.HeaderCell>
</Table.Row>
`;

exports[`FeatureComparisonModal:  HeaderRow: should render correctly 1`] = `
<Table.Row>
  <Table.Cell
    className="FeatureCell"
  >
      
  </Table.Cell>
  <Table.Cell
    className="FeatureComparisonCell PlanOne PlanName"
  >
     
    Test Account
     
  </Table.Cell>
  <Table.Cell
    className="FeatureComparisonCell PlanTwo PlanName"
  >
     
    Starter Plans
     
  </Table.Cell>
  <Table.Cell
    className="FeatureComparisonCell PlanThree PlanName"
  >
     
    Premier Plans
     
  </Table.Cell>
</Table.Row>
`;

exports[`FeatureComparisonModal:  Row:  should render correctly 1`] = `
<Table.Row>
  <Table.Cell
    className="FeatureCell"
  >
     
    Signals Predictive Analytics
     
  </Table.Cell>
  <Table.Cell
    className="FeatureComparisonCell PlanOne"
  >
     
    <Check />
     
  </Table.Cell>
  <Table.Cell
    className="FeatureComparisonCell PlanTwo"
  >
     
    <Check />
     
  </Table.Cell>
  <Table.Cell
    className="FeatureComparisonCell PlanThree"
  >
     
    <Check />
     
  </Table.Cell>
</Table.Row>
`;
